--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     
-<div class="mario_block">
-    <div class="mario">
+<div class="naruto_block">
+    <div class="naruto">
    
     </div>
 </div>
